# simons

./: README.md  chatgpt_bt.py  direccional_bias.py  direccional_bias_min_res.py  direccional_bias_min_res_v2.py  direccional_bias_tf_res.py  direccional_bias_tf_res_event.py  main.py  pyproject.toml
data/: ES_60_2025.03.28.csv
data/parquet/: ES_60_2025.03.28.parquet
fast_events/: framework.py  runner.py  test_strategy.py
framework/: backtester.py  data_manager.py  data_simularity_test.py  sim_trader.py  symbols.py  types.py
framework/reporting/: chart.py  reporter.py
plot/: plot.py
vector/: data_manager.py
